# Glasgow-MicroStream

./: .gitignore  CMakeLists.txt  Makefile  NetworkTest.cpp  README.md  Stream.py  boostserialize.cpp  component.mk  main.cpp
examples/: Batch.py  ContinuousAggregate.py  Filter.py  Map.py  MapTest.cpp  NetworkTest.cpp  PerformanceTest.cpp  PolledExample.py  RealTimeTest.cpp  Split.py  TailExample.cpp  Union.py  Window.py  main.cpp
examples/house_example/: House_Graph.py  TemperatureProvider.py
include/: Doxyfile  LinkedList.h  Stream.h  Stream.hpp  StreamTypes.h  StreamTypes.hpp
include/network/: NetworkListener.cpp  NetworkListener.hpp  NetworkSender.hpp  NetworkSink.h  NetworkSink.hpp  NetworkSource.h  NetworkSource.hpp  StreamPacket.hpp
include/network/peerdiscovery/: PeerDiscoverer.cpp  PeerDiscoverer.hpp  PeerListener.cpp  PeerListener.hpp  PeerSender.hpp
include/network/peerdiscovery/packet/: PeerDiscoveryPacketTypes.hpp  PeerDiscoveryQueryPacket.hpp  PeerDiscoveryReplyPacket.hpp  StreamPacket.hpp
include/stream/: FilterStream.h  FilterStream.hpp  MapStream.h  MapStream.hpp  Sink.h  Sink.hpp  SplitStream.h  SplitStream.hpp  StatefulStream.hpp  StreamTypes.hpp  Subscribeable.cpp  Subscribeable.h  Subscribeable.hpp  Subscriber.h  Subscriber.hpp  TailStream.hpp  Topology.hpp  TwoTypeStream.cpp  TwoTypeStream.h  TwoTypeStream.hpp  Window.cpp  Window.h  Window.hpp  WindowAggregate.h  WindowAggregate.hpp  WindowBatch.h  WindowBatch.hpp
include/stream/sink/: BoostSerializedNetworkSink.hpp  NetworkSink.hpp  Sink.hpp
include/stream/source/: BoostSerializedNetworkSource.hpp  FixedDataSource.hpp  IterableSource.hpp  NetworkSource.hpp  PolledSource.hpp  Source.hpp
include/util/: optional.hpp
tests/: main.cpp
tests/network/peerdiscovery/packet/: StreamPacketTest.cpp
